--- a/lesson_5/css/style.css
+++ b/lesson_5/css/style.css
@@ -3,7 +3,7 @@
 /* ----------------------------------------Poppins fonts---------------------------------------- */
 
 /* Poppins fonts */
-@import url('<link href="https://fonts.googleapis.com/css?family=Poppins:300,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,700&display=swap');
 
 
 /* ----------------------------------------General---------------------------------------- */
