--- a/lesson_5/css/style.css
+++ b/lesson_5/css/style.css
@@ -14,7 +14,6 @@ body{
     font-size: 14px;
     line-height: 1.78; /* 25px */
     color: #6C757D;
-    width: 1440px;
     margin: 0 auto;
 }
 
@@ -52,11 +51,13 @@ h1, h2 {
 }
 /* ----------------------------------------Header---------------------------------------- */
 
-.header {}
+.header {
+    max-width: 816px;
+    margin: 0 auto;
+}
 
 .header__title {
     display: inline-block;
-    margin-left: 312px;
     padding-top: 15px;
     max-width: 400px;
 }
