--- a/lesson_5/css/style.css
+++ b/lesson_5/css/style.css
@@ -19,10 +19,9 @@ body{
 
 .content {
     max-width: 816px;
-    margin: 80px auto;
 }
 .content p {
-    margin-top: 40px;
+    padding-bottom: 40px;
 }
 
 .title {
@@ -30,7 +29,6 @@ body{
     font-size: 25px;
     line-height: 1.6; /* 40px */
     color: #212529;
-    margin: 40px 0;
 }
 
 .image {
@@ -48,22 +46,41 @@ body{
 .main__content {}
 
 .content-part01 {
-    margin-bottom: 80px;
+    margin: 0px auto 0px auto;
+    padding-bottom: 40px;
 }
 
 .title-one {
     max-width: 400px;
+    padding: 40px 0;
 }
 
 .text {}
-.image-one {}
-.content-part02 {}
+
+.image-one {
+    width: 100%;
+}
+.image-one img {
+    width: 1240px;
+    height: 400px;
+}
+.content-part02 {
+    margin: 0px auto 0px auto;
+    padding-top: 80px;
+    padding-bottom: 40px;
+}
 
 .title-two {
     max-width: 590px;
+    padding: 0px 0px 40px 0px;
 }
 .image-two {
-    font-size:0
+    width: 100%;
+    font-size: 0;
+}
+.image-two img {
+    width: 605px;
+    height: 400px;
 }
 .lake {
     margin-right: 15px;
@@ -72,7 +89,12 @@ body{
     margin-left: 15px;
 }
 
-.content-part03 {}
+.content-part03 {
+    margin: 0px auto 0px auto;
+    padding-top: 80px;
+}
 
 /* ----------------------------------------Footer---------------------------------------- */
 .footer {}
+
+
