--- a/lesson_6/css/style.css
+++ b/lesson_6/css/style.css
@@ -128,7 +128,6 @@ body{
     display: inline-block;
     padding: 2px 13px;
     gap: 10px;
-    border: 1px solid #C4C4C4;
     border-radius: 3px;
     margin-right: 15px;
     margin-bottom: 20px;
@@ -148,11 +147,13 @@ body{
 
 .button-article__page-two {
     opacity: 0.6;
+    border: 1px dashed rgb(206, 177, 244);
 }
 .button-article__page-three {
     visibility: hidden;
 }
 .button-article__page-choice {
+    border: 1px solidrgb(114, 99, 77);
     outline: 1px solid rgb(113, 99, 82);
     color: #000;
 }
