--- a/lesson_15/css/style.css
+++ b/lesson_15/css/style.css
@@ -75,7 +75,10 @@ img {
     margin-top: 40px;
     margin-bottom: 53px;
 }
-.body-main__image {}
+.body-main__image {
+    max-width: 1200px;
+    max-height: 513px;
+}
 
 /* ----------------------------------------page__design---------------------------------------- */
 
@@ -145,11 +148,13 @@ img {
     flex-wrap: wrap;
     row-gap: 32px;
     margin: 0 -16px;
+    flex-basis: ;
 }
 .collection-design__item {
-    flex: 0 1 50%;
+    flex: 0 0 50%;
     padding: 0 16px;
 }
+
 .full-screen {
     text-align: center;
     flex-basis: 100%;
@@ -204,7 +209,9 @@ img {
     margin-bottom: 40px;
 }
 
-.body-achievement__image {}
+.body-achievement__image {
+    flex: 0 1 746px;
+}
 
 .body-achievement__inform {
     flex: 0 1 27.833333%;
