--- a/lesson_21/css/style.css
+++ b/lesson_21/css/style.css
@@ -119,6 +119,7 @@ body {
 }
 
 .header__logo {
+  text-transform: uppercase;
   font-size: 1.125rem; /* 18px */
   font-weight: 700;
   line-height: 1.39; /* 25px */
